Fixed username alignment

--- a/alumni-app/css/profile.css
+++ b/alumni-app/css/profile.css
@@ -172,6 +172,10 @@ textarea.editable {
   width: 50%;
 }
 
+#username {
+  padding-top: 10px;
+}
+
 @media only screen and (max-width: 700px) {
   .profile {
     height: 80vh;
